--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mosaic-component": "^4.1.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.2",
@@ -42,8 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/uuid": "^8.3.0",
-    "jest": "^26.6.3",
     "ts-jest": "^26.4.4"
   }
 }
