--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
+    "minimist": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-mosaic-component": "^4.1.1",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/minimist": "^1.2.1",
     "@types/uuid": "^8.3.0",
     "ts-jest": "^26.4.4"
   }
