--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "minimist": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-mosaic-component": "^4.1.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
