--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^16.9.8",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
-    "minimist": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
@@ -20,7 +19,8 @@
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yargs-parser": "^20.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
