--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "git-playground",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nilaymaj.github.io/git-playground",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
     "@types/classnames": "^2.2.11",
     "@types/minimist": "^1.2.1",
     "@types/uuid": "^8.3.0",
+    "gh-pages": "^3.1.0",
     "ts-jest": "^26.4.4"
   }
 }
